Changelog
=========

13.4-dev0 - (unreleased)
---------------------

13.3 - (2018-07-12)
---------------------
* Change: use warning instead of exception for expected behaviour
  [alecghica refs #97089]

13.2 - (2018-06-20)
---------------------
* Change: updated URLs pointing to eea.europa.eu with https://
  [alecghica refs #95849]

13.1 - (2018-03-14)
-------------------
* Change: load jqueryui within dataset_view used by the survey dialog
  [ichim-david refs #91577]
* Change: removed dataservice_view.js from portal_javascripts
  as we no longer show fancybox popups for eeafigure and eeafigurefile
  [ichim-david refs #91577]

13.0 - (2017-12-19)
-------------------
* Bug fix: fixed package structure and Jenkinsfile
  [alecghica refs #90819]

12.9 - (2017-12-12)
-------------------
* Change: Replace eeacms/zptlint with eeacms/plone-test:4 zptlint
  [avoinea refs #90415]
* Change: Update to work with eea.facetednavigation 10.0+
  [avoinea refs #89955]
* Change: Update tests to work with latest EEAContentTypes
  [avoinea refs #89955]

12.8 - (2017-11-14)
-------------------
* Bug fix: Fixed deprecated 'dataSource' field blocking EEAFigure edit.
  [avoinea refs #89850]

12.7 - (2017-08-16)
-------------------
* Bug fix: W3C compliance modifications
  [valipod refs #86295]

12.6 - (2017-06-26)
-------------------
* Bug fix: fixed failing tests due to depiction changes
  [zoltan_andras refs #81209]

12.5 - (2017-06-06)
-------------------
* Change: take into consideration the fact that WidgetFilterBrains might
  receive a datetime with timezone information attached in which case we
  need to get rid of it when comparing to a datetime without a timezone
  [ichim-david refs #85555]

12.4 - (2017-05-22)
-------------------
* Change: Add dedicated async quota for Data Service jobs
  [avoinea refs #84915]
* Change: Remove hard-dependency on plone.app.async
  [avoinea refs #84915]
* Change: fixed PyLint warnings and errors
  [valipod refs #84949]

12.3 - (2017-05-15)