@@ -1,42 +1,0 @@
-<div id="survey-description" style="border-bottom: 1px dotted black">
-  <div i18n:translate="">
-  Before downloading this dataset, please give us some feedback about the usage of this dataset. This will 
-help us improving our online services. <strong>One question only.</strong>
-  </div>
-</div>
-<h2 i18n:translate="">In which sectors/topics you intend to use this dataset?</h2>
-<form id="survey-content" action="." tal:define="
-  sectors python:view.vocabulary(u'eea.dataservice.vocabularies.economic-sectors');
-  domains python:view.vocabulary(u'eea.dataservice.vocabularies.environmental-domains');">
-
-  <div style="float: left; width: 30em;" id="sectors-widget">
-    <h3 i18n:translate="">Economic sectors</h3>
-    <ul style="list-style: none">
-      <li tal:repeat="sector sectors">
-        <input type="checkbox" name="sectors" tal:attributes="
-          value python:sector[0];
-          title python:sector[1];
-          id python:sector[0]" />
-        <label style="font-weight: normal"
-          tal:attributes="for python:sector[0]"
-          tal:content="python:sector[1]" />
-      </li>
-    </ul>
-  </div>
-
-  <div style="margin-left: 31em; padding-top: 1px; display: none" id="domains-widget">
-  <h3 i18n:translate="">Environmental topics</h3>
-  <ul style="list-style: none">
-    <li tal:repeat="domain domains">
-      <input type="checkbox" name="domains" tal:attributes="
-        value python:domain[0];
-        title python:domain[1];
-        id python:domain[0]" />
-      <label style="font-weight: normal"
-        tal:attributes="for python:domain[0]"
-        tal:content="python:domain[1]" />
-    </li>
-  </ul>
-  </div>
-
-</form>
