@@ -3,6 +3,8 @@ Changelog
 
 13.4-dev0 - (unreleased)
 ---------------------
+* Change: Drop users' feedback survey on Dataset download
+  [avoinea refs #98047]
 
 13.3 - (2018-07-12)
 ---------------------
